--- a/index.html
+++ b/index.html
@@ -12,13 +12,16 @@
     <header>
         <div class="logo-container">
             <div class="logo">
-    <img src="rocchilogo.jpg" alt="Rocchi Metalurgica" class="logo-img">
-    <span class="logo-text">Rocchi Metalurgica e Importaciones</span>
-</div>
+                <img src="rocchilogo.jpg" alt="Rocchi Metalurgica" class="logo-img">
+                <span class="logo-text">Rocchi Metalurgica e Importaciones</span>
+            </div>
         </div>
         
         <nav>
-            <ul class="nav-menu">
+            <button class="menu-toggle" id="menu-toggle" aria-label="Abrir menú">
+                <i class="fas fa-bars"></i>
+            </button>
+            <ul class="nav-menu" id="nav-menu">
                 <li><a href="#" class="nav-link active" data-target="inicio">Inicio</a></li>
                 <li><a href="#" class="nav-link" data-target="productos">Productos</a></li>
                 <li><a href="#" class="nav-link" data-target="servicios">Servicios</a></li>
