--- a/index.html
+++ b/index.html
@@ -9,40 +9,41 @@
 </head>
 <body>
 
-    <header>
-        <div class="logo-container">
-            <div class="logo">
-                <img src="rocchilogo.jpg" alt="Rocchi Metalurgica" class="logo-img">
-                <span class="logo-text">Rocchi Metalurgica e Importaciones</span>
-            </div>
+<header>
+    <div class="logo-container">
+        <div class="logo">
+            <img src="rocchilogo.jpg" alt="Rocchi Metalurgica" class="logo-img">
+            <span class="logo-text">Rocchi Metalurgica e Importaciones</span>
         </div>
-        
-        <nav>
-            <button class="menu-toggle" id="menu-toggle" aria-label="Abrir menú">
-                <i class="fas fa-bars"></i>
-            </button>
-            <ul class="nav-menu" id="nav-menu">
-                <li><a href="#" class="nav-link active" data-target="inicio">Inicio</a></li>
-                <li><a href="#" class="nav-link" data-target="productos">Productos</a></li>
-                <li><a href="#" class="nav-link" data-target="servicios">Servicios</a></li>
-                <li><a href="#" class="nav-link" data-target="nosotros">Nosotros</a></li>
-                <li><a href="#" class="nav-link" data-target="contacto">Contacto</a></li>
-            </ul>
-        </nav>
-    </header>
+    </div>
 
-    <main id="content">
-        <section id="inicio" class="page-content active">
-            <h1>Bienvenidos a Rocchi M&I</h1>
-            <p>Tenemos la solucion a tus trabajos metalurgicos domesticos y te asesoramos en la compra e importacion de bienes industriales y domesticos de cualquier tipo</p>
-            <button class="btn-primary">Saber más</button>
-        </section>
-    </main>
+    <nav>
+        <button class="menu-toggle" id="menu-toggle" aria-label="Abrir menú">
+            <i class="fas fa-bars"></i>
+        </button>
+        <ul class="nav-menu" id="nav-menu">
+            <li><a href="#" class="nav-link active" data-target="inicio">Inicio</a></li>
+            <li><a href="#" class="nav-link" data-target="productos">Productos</a></li>
+            <li><a href="#" class="nav-link" data-target="servicios">Servicios</a></li>
+            <li><a href="#" class="nav-link" data-target="nosotros">Nosotros</a></li>
+            <li><a href="#" class="nav-link" data-target="contacto">Contacto</a></li>
+        </ul>
+    </nav>
+</header>
 
-    <footer>
-        <p>&copy; 2026 Rocchi Metalurgica e Importaciones - Todos los derechos reservados.</p>
-    </footer>
+<main id="content">
+    <section class="page-content">
+        <h1>Bienvenidos a Rocchi M&I</h1>
+        <p>Tenemos la solución a tus trabajos metalúrgicos domésticos y te asesoramos en la compra e importación de bienes industriales y domésticos.</p>
+        <button class="btn-primary">Saber más</button>
+    </section>
+</main>
 
-    <script src="script.js"></script>
+<footer>
+    <p>&copy; 2026 Rocchi Metalurgica e Importaciones - Todos los derechos reservados.</p>
+</footer>
+
+<script src="script.js"></script>
 </body>
 </html>
+
