--- a/index.html
+++ b/index.html
@@ -32,9 +32,12 @@
 </header>
 
 <main id="content">
-    <section class="page-content">
+   <section class="page-content">
         <h1>Bienvenidos a Rocchi M&I</h1>
-        <p>Tenemos la solución a tus trabajos metalúrgicos domésticos y te asesoramos en la compra e importación de bienes industriales y domésticos.</p>
+        <p>
+            Tenemos la solución a tus trabajos metalúrgicos domésticos y te asesoramos
+            en la compra e importación de bienes industriales y domésticos.
+        </p>
         <button class="btn-primary">Saber más</button>
     </section>
 </main>
@@ -46,4 +49,5 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
