html que anda index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="logo-container">
         <div class="logo">
             <img src="rocchilogo.jpg" alt="Rocchi Metalurgica" class="logo-img">
-            <span class="logo-text">Rocchi Metalurgica e Importaciones</span>
+            <span class="logo-text">Rocchi Metalúrgica e Importaciones</span>
         </div>
     </div>
 
@@ -43,11 +43,12 @@
 </main>
 
 <footer>
-    <p>&copy; 2026 Rocchi Metalurgica e Importaciones - Todos los derechos reservados.</p>
+    <p>&copy; 2026 Rocchi Metalúrgica e Importaciones - Todos los derechos reservados.</p>
 </footer>
 
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
