--- a/index.html
+++ b/index.html
@@ -10,17 +10,38 @@
 <body>
 
 <header>
-    <div class="logo-container">
+    <div class="top-header">
+
+        <!-- Banderas izquierda -->
+        <div class="flags flags-left">
+            <img src="flag-us.png" alt="English" data-lang="en">
+            <img src="flag-br.png" alt="Português" data-lang="pt">
+        </div>
+
+        <!-- Logo -->
         <div class="logo">
             <img src="rocchilogo.jpg" alt="Rocchi Metalurgica" class="logo-img">
-            <span class="logo-text">Rocchi Metalúrgica e Importaciones</span>
         </div>
+
+        <!-- Banderas derecha -->
+        <div class="flags flags-right">
+            <img src="flag-it.png" alt="Italiano" data-lang="it">
+            <img src="flag-ar.png" alt="Español" data-lang="es">
+        </div>
+
     </div>
 
+    <!-- Texto logo -->
+    <div class="logo-text">
+        Rocchi Metalúrgica e Importaciones
+    </div>
+
+    <!-- Navegación -->
     <nav>
         <button class="menu-toggle" id="menu-toggle" aria-label="Abrir menú">
             <i class="fas fa-bars"></i>
         </button>
+
         <ul class="nav-menu" id="nav-menu">
             <li><a href="#" class="nav-link active" data-target="inicio">Inicio</a></li>
             <li><a href="#" class="nav-link" data-target="productos">Productos</a></li>
@@ -31,16 +52,7 @@
     </nav>
 </header>
 
-<main id="content">
-   <section class="page-content">
-        <h1>Bienvenidos a Rocchi M&I</h1>
-        <p>
-            Tenemos la solución a tus trabajos metalúrgicos domésticos y te asesoramos
-            en la compra e importación de bienes industriales y domésticos.
-        </p>
-        <button class="btn-primary">Saber más</button>
-    </section>
-</main>
+<main id="content"></main>
 
 <footer>
     <p>&copy; 2026 Rocchi Metalúrgica e Importaciones - Todos los derechos reservados.</p>
@@ -49,6 +61,4 @@
 <script src="script.js"></script>
 </body>
 </html>
-
-
 
